kubernetes/daemonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: cop-daemonset
  namespace: cop
spec:
  selector: 
    matchLabels:
      app: cop-daemonset
  template:
    metadata:
      labels:
        app: cop-daemonset
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
