kubernetes/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cop-deployment
  namespace: cop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-observability-platform
  template:
    metadata:
      labels:
        app: cloud-observability-platform
    spec:
      containers: 
        - name: cloud-observability-platform
          image: cloud-observability-platform:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
