kubernetes/service.yml
kind: Service
apiVersion: v1
metadata: 
  name: cloud-observability-platform-service
spec:
  selector:
    app: cloud-observability-platform
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
