kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cop-ingress
  namespace: cop
spec:
  ingressClassName: nginx
  rules:
    - host: cop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cop-service
                port:
                  number: 8000
